--- a/WebContent/custom.css
+++ b/WebContent/custom.css
@@ -11,230 +11,281 @@
 }
 
 .yellow-btn {
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-  width: 250px;
-  height: 250px;
-  cursor: pointer;
-  margin: 0 auto;
-  border: 2px solid rgba(255,255,0,1);
-  -webkit-border-radius: 40px;
-  border-radius: 40px;
-  font: normal 50px/250px "Advent Pro", Helvetica, sans-serif;
-  color: rgba(255,255,0,1);
-  text-align: center;
-  -o-text-overflow: clip;
-  text-overflow: clip;
-  letter-spacing: 1px;
-  background: rgba(0,0,0,0);
-  -webkit-transition: background-color 0.3s cubic-bezier(0, 0, 0, 0), color 0.3s cubic-bezier(0, 0, 0, 0), width 0.3s cubic-bezier(0, 0, 0, 0), border-width 0.3s cubic-bezier(0, 0, 0, 0), border-color 0.3s cubic-bezier(0, 0, 0, 0);
-  -moz-transition: background-color 0.3s cubic-bezier(0, 0, 0, 0), color 0.3s cubic-bezier(0, 0, 0, 0), width 0.3s cubic-bezier(0, 0, 0, 0), border-width 0.3s cubic-bezier(0, 0, 0, 0), border-color 0.3s cubic-bezier(0, 0, 0, 0);
-  -o-transition: background-color 0.3s cubic-bezier(0, 0, 0, 0), color 0.3s cubic-bezier(0, 0, 0, 0), width 0.3s cubic-bezier(0, 0, 0, 0), border-width 0.3s cubic-bezier(0, 0, 0, 0), border-color 0.3s cubic-bezier(0, 0, 0, 0);
-  transition: background-color 0.3s cubic-bezier(0, 0, 0, 0), color 0.3s cubic-bezier(0, 0, 0, 0), width 0.3s cubic-bezier(0, 0, 0, 0), border-width 0.3s cubic-bezier(0, 0, 0, 0), border-color 0.3s cubic-bezier(0, 0, 0, 0);
+	-webkit-box-sizing: content-box;
+	-moz-box-sizing: content-box;
+	box-sizing: content-box;
+	width: 250px;
+	height: 250px;
+	cursor: pointer;
+	margin: 0 auto;
+	border: 2px solid rgba(255, 255, 0, 1);
+	-webkit-border-radius: 40px;
+	border-radius: 40px;
+	font: normal 50px/250px "Advent Pro", Helvetica, sans-serif;
+	color: rgba(255, 255, 0, 1);
+	text-align: center;
+	-o-text-overflow: clip;
+	text-overflow: clip;
+	letter-spacing: 1px;
+	background: rgba(0, 0, 0, 0);
+	-webkit-transition: background-color 0.3s cubic-bezier(0, 0, 0, 0),
+		color 0.3s cubic-bezier(0, 0, 0, 0), width 0.3s
+		cubic-bezier(0, 0, 0, 0), border-width 0.3s cubic-bezier(0, 0, 0, 0),
+		border-color 0.3s cubic-bezier(0, 0, 0, 0);
+	-moz-transition: background-color 0.3s cubic-bezier(0, 0, 0, 0), color
+		0.3s cubic-bezier(0, 0, 0, 0), width 0.3s cubic-bezier(0, 0, 0, 0),
+		border-width 0.3s cubic-bezier(0, 0, 0, 0), border-color 0.3s
+		cubic-bezier(0, 0, 0, 0);
+	-o-transition: background-color 0.3s cubic-bezier(0, 0, 0, 0), color
+		0.3s cubic-bezier(0, 0, 0, 0), width 0.3s cubic-bezier(0, 0, 0, 0),
+		border-width 0.3s cubic-bezier(0, 0, 0, 0), border-color 0.3s
+		cubic-bezier(0, 0, 0, 0);
+	transition: background-color 0.3s cubic-bezier(0, 0, 0, 0), color 0.3s
+		cubic-bezier(0, 0, 0, 0), width 0.3s cubic-bezier(0, 0, 0, 0),
+		border-width 0.3s cubic-bezier(0, 0, 0, 0), border-color 0.3s
+		cubic-bezier(0, 0, 0, 0);
 }
 
 .yellow-btn:hover {
-  color: rgba(255,255,255,1);
-  letter-spacing: 10px;
-  background: rgba(255,255,0,1);
+	color: rgba(255, 255, 255, 1);
+	letter-spacing: 10px;
+	background: rgba(255, 255, 0, 1);
 }
 
 .yellow-btn:active {
-  letter-spacing: 1px;
-  -webkit-transition: none;
-  -moz-transition: none;
-  -o-transition: none;
-  transition: none;
+	letter-spacing: 1px;
+	-webkit-transition: none;
+	-moz-transition: none;
+	-o-transition: none;
+	transition: none;
 }
 
-
 .red-btn {
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-  width: 250px;
-  height: 250px;
-  cursor: pointer;
-  margin: 0 auto;
-  border: 2px solid rgba(255,0,0,1);
-  -webkit-border-radius: 40px;
-  border-radius: 40px;
-  font: normal 50px/250px "Advent Pro", Helvetica, sans-serif;
-  color: rgba(255,0,0,1);
-  text-align: center;
-  -o-text-overflow: clip;
-  text-overflow: clip;
-  letter-spacing: 1px;
-  background: rgba(0,0,0,0);
-  -webkit-transition: background-color 0.3s cubic-bezier(0, 0, 0, 0), color 0.3s cubic-bezier(0, 0, 0, 0), width 0.3s cubic-bezier(0, 0, 0, 0), border-width 0.3s cubic-bezier(0, 0, 0, 0), border-color 0.3s cubic-bezier(0, 0, 0, 0);
-  -moz-transition: background-color 0.3s cubic-bezier(0, 0, 0, 0), color 0.3s cubic-bezier(0, 0, 0, 0), width 0.3s cubic-bezier(0, 0, 0, 0), border-width 0.3s cubic-bezier(0, 0, 0, 0), border-color 0.3s cubic-bezier(0, 0, 0, 0);
-  -o-transition: background-color 0.3s cubic-bezier(0, 0, 0, 0), color 0.3s cubic-bezier(0, 0, 0, 0), width 0.3s cubic-bezier(0, 0, 0, 0), border-width 0.3s cubic-bezier(0, 0, 0, 0), border-color 0.3s cubic-bezier(0, 0, 0, 0);
-  transition: background-color 0.3s cubic-bezier(0, 0, 0, 0), color 0.3s cubic-bezier(0, 0, 0, 0), width 0.3s cubic-bezier(0, 0, 0, 0), border-width 0.3s cubic-bezier(0, 0, 0, 0), border-color 0.3s cubic-bezier(0, 0, 0, 0);
+	-webkit-box-sizing: content-box;
+	-moz-box-sizing: content-box;
+	box-sizing: content-box;
+	width: 250px;
+	height: 250px;
+	cursor: pointer;
+	margin: 0 auto;
+	border: 2px solid rgba(255, 0, 0, 1);
+	-webkit-border-radius: 40px;
+	border-radius: 40px;
+	font: normal 50px/250px "Advent Pro", Helvetica, sans-serif;
+	color: rgba(255, 0, 0, 1);
+	text-align: center;
+	-o-text-overflow: clip;
+	text-overflow: clip;
+	letter-spacing: 1px;
+	background: rgba(0, 0, 0, 0);
+	-webkit-transition: background-color 0.3s cubic-bezier(0, 0, 0, 0),
+		color 0.3s cubic-bezier(0, 0, 0, 0), width 0.3s
+		cubic-bezier(0, 0, 0, 0), border-width 0.3s cubic-bezier(0, 0, 0, 0),
+		border-color 0.3s cubic-bezier(0, 0, 0, 0);
+	-moz-transition: background-color 0.3s cubic-bezier(0, 0, 0, 0), color
+		0.3s cubic-bezier(0, 0, 0, 0), width 0.3s cubic-bezier(0, 0, 0, 0),
+		border-width 0.3s cubic-bezier(0, 0, 0, 0), border-color 0.3s
+		cubic-bezier(0, 0, 0, 0);
+	-o-transition: background-color 0.3s cubic-bezier(0, 0, 0, 0), color
+		0.3s cubic-bezier(0, 0, 0, 0), width 0.3s cubic-bezier(0, 0, 0, 0),
+		border-width 0.3s cubic-bezier(0, 0, 0, 0), border-color 0.3s
+		cubic-bezier(0, 0, 0, 0);
+	transition: background-color 0.3s cubic-bezier(0, 0, 0, 0), color 0.3s
+		cubic-bezier(0, 0, 0, 0), width 0.3s cubic-bezier(0, 0, 0, 0),
+		border-width 0.3s cubic-bezier(0, 0, 0, 0), border-color 0.3s
+		cubic-bezier(0, 0, 0, 0);
 }
 
 .red-btn:hover {
-  color: rgba(255,255,255,1);
-  letter-spacing: 10px;
-  background: rgba(255,0,0,1);
+	color: rgba(255, 255, 255, 1);
+	letter-spacing: 10px;
+	background: rgba(255, 0, 0, 1);
 }
 
 .red-btn:active {
-  letter-spacing: 1px;
-  -webkit-transition: none;
-  -moz-transition: none;
-  -o-transition: none;
-  transition: none;
+	letter-spacing: 1px;
+	-webkit-transition: none;
+	-moz-transition: none;
+	-o-transition: none;
+	transition: none;
 }
 
-
 .green-btn {
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-  width: 250px;
-  height: 250px;
-  cursor: pointer;
-  margin: 0 auto;
-  border: 2px solid rgba(0,255,25,1);
-  -webkit-border-radius: 40px;
-  border-radius: 40px;
-  font: normal 50px/250px "Advent Pro", Helvetica, sans-serif;
-  color: rgba(0,255,25,1);
-  text-align: center;
-  -o-text-overflow: clip;
-  text-overflow: clip;
-  letter-spacing: 1px;
-  background: rgba(0,0,0,0);
-  -webkit-transition: background-color 0.3s cubic-bezier(0, 0, 0, 0), color 0.3s cubic-bezier(0, 0, 0, 0), width 0.3s cubic-bezier(0, 0, 0, 0), border-width 0.3s cubic-bezier(0, 0, 0, 0), border-color 0.3s cubic-bezier(0, 0, 0, 0);
-  -moz-transition: background-color 0.3s cubic-bezier(0, 0, 0, 0), color 0.3s cubic-bezier(0, 0, 0, 0), width 0.3s cubic-bezier(0, 0, 0, 0), border-width 0.3s cubic-bezier(0, 0, 0, 0), border-color 0.3s cubic-bezier(0, 0, 0, 0);
-  -o-transition: background-color 0.3s cubic-bezier(0, 0, 0, 0), color 0.3s cubic-bezier(0, 0, 0, 0), width 0.3s cubic-bezier(0, 0, 0, 0), border-width 0.3s cubic-bezier(0, 0, 0, 0), border-color 0.3s cubic-bezier(0, 0, 0, 0);
-  transition: background-color 0.3s cubic-bezier(0, 0, 0, 0), color 0.3s cubic-bezier(0, 0, 0, 0), width 0.3s cubic-bezier(0, 0, 0, 0), border-width 0.3s cubic-bezier(0, 0, 0, 0), border-color 0.3s cubic-bezier(0, 0, 0, 0);
+	-webkit-box-sizing: content-box;
+	-moz-box-sizing: content-box;
+	box-sizing: content-box;
+	width: 250px;
+	height: 250px;
+	cursor: pointer;
+	margin: 0 auto;
+	border: 2px solid rgba(0, 255, 25, 1);
+	-webkit-border-radius: 40px;
+	border-radius: 40px;
+	font: normal 50px/250px "Advent Pro", Helvetica, sans-serif;
+	color: rgba(0, 255, 25, 1);
+	text-align: center;
+	-o-text-overflow: clip;
+	text-overflow: clip;
+	letter-spacing: 1px;
+	background: rgba(0, 0, 0, 0);
+	-webkit-transition: background-color 0.3s cubic-bezier(0, 0, 0, 0),
+		color 0.3s cubic-bezier(0, 0, 0, 0), width 0.3s
+		cubic-bezier(0, 0, 0, 0), border-width 0.3s cubic-bezier(0, 0, 0, 0),
+		border-color 0.3s cubic-bezier(0, 0, 0, 0);
+	-moz-transition: background-color 0.3s cubic-bezier(0, 0, 0, 0), color
+		0.3s cubic-bezier(0, 0, 0, 0), width 0.3s cubic-bezier(0, 0, 0, 0),
+		border-width 0.3s cubic-bezier(0, 0, 0, 0), border-color 0.3s
+		cubic-bezier(0, 0, 0, 0);
+	-o-transition: background-color 0.3s cubic-bezier(0, 0, 0, 0), color
+		0.3s cubic-bezier(0, 0, 0, 0), width 0.3s cubic-bezier(0, 0, 0, 0),
+		border-width 0.3s cubic-bezier(0, 0, 0, 0), border-color 0.3s
+		cubic-bezier(0, 0, 0, 0);
+	transition: background-color 0.3s cubic-bezier(0, 0, 0, 0), color 0.3s
+		cubic-bezier(0, 0, 0, 0), width 0.3s cubic-bezier(0, 0, 0, 0),
+		border-width 0.3s cubic-bezier(0, 0, 0, 0), border-color 0.3s
+		cubic-bezier(0, 0, 0, 0);
 }
 
 .green-btn:hover {
-  color: rgba(255,255,255,1);
-  letter-spacing: 10px;
-  background: rgba(0,255,25,1);
+	color: rgba(255, 255, 255, 1);
+	letter-spacing: 10px;
+	background: rgba(0, 255, 25, 1);
 }
 
 .green-btn:active {
-  letter-spacing: 1px;
-  -webkit-transition: none;
-  -moz-transition: none;
-  -o-transition: none;
-  transition: none;
+	letter-spacing: 1px;
+	-webkit-transition: none;
+	-moz-transition: none;
+	-o-transition: none;
+	transition: none;
 }
 
 .background {
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-  width: 302%;
-  height: 66%;
-  padding: 21px;
-  overflow: hidden;
-  border: none;
-  font: normal 16px/1 "Times New Roman", Times, serif;
-  color: rgba(255,255,255,1);
-  text-align: center;
-  -o-text-overflow: ellipsis;
-  text-overflow: ellipsis;
-  background: url("http://enjoycss.com/bg-img/custom/25190-1p7nuh5.jpg");
-  background-position: 50% 50%;
-  -webkit-background-origin: padding-box;
-  background-origin: padding-box;
-  -webkit-background-clip: border-box;
-  background-clip: border-box;
-  -webkit-background-size: auto auto;
-  background-size: auto auto;
-  -webkit-box-shadow: 1px 1px 1px 0 rgba(0,0,0,0.3) ;
-  box-shadow: 1px 1px 1px 0 rgba(0,0,0,0.3) ;
-  text-shadow: 1px 1px 1px rgba(0,0,0,0.2) ;
+	-webkit-box-sizing: content-box;
+	-moz-box-sizing: content-box;
+	box-sizing: content-box;
+	width: 302%;
+	height: 66%;
+	padding: 21px;
+	overflow: hidden;
+	border: none;
+	font: normal 16px/1 "Times New Roman", Times, serif;
+	color: rgba(255, 255, 255, 1);
+	text-align: center;
+	-o-text-overflow: ellipsis;
+	text-overflow: ellipsis;
+	background: url("http://enjoycss.com/bg-img/custom/25190-1p7nuh5.jpg");
+	background-position: 50% 50%;
+	-webkit-background-origin: padding-box;
+	background-origin: padding-box;
+	-webkit-background-clip: border-box;
+	background-clip: border-box;
+	-webkit-background-size: auto auto;
+	background-size: auto auto;
+	-webkit-box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, 0.3);
+	box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, 0.3);
+	text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
 }
 
 .input-name {
-  display: inline-block;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  width: 150px;
-  height: 42px;
-  cursor: pointer;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  padding: 0 20px;
-  overflow: hidden;
-  border: none;
-  -webkit-border-radius: 21px;
-  border-radius: 21px;
-  font: normal 20px/normal "Antic", Helvetica, sans-serif;
-  color: rgba(140,140,140,1);
-  text-decoration: normal;
-  -o-text-overflow: ellipsis;
-  text-overflow: ellipsis;
-  background: rgba(40,40,40,0.4);
-  -webkit-box-shadow: 1px 1px 2px 0 rgba(0,0,0,0.5) inset;
-  box-shadow: 1px 1px 2px 0 rgba(0,0,0,0.5) inset;
-  -webkit-transition: all 502ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
-  -moz-transition: all 502ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
-  -o-transition: all 502ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
-  transition: all 502ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+	display: inline-block;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	width: 150px;
+	height: 42px;
+	cursor: pointer;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	padding: 0 20px;
+	overflow: hidden;
+	border: none;
+	-webkit-border-radius: 21px;
+	border-radius: 21px;
+	font: normal 20px/normal "Antic", Helvetica, sans-serif;
+	color: rgba(140, 140, 140, 1);
+	text-decoration: normal;
+	-o-text-overflow: ellipsis;
+	text-overflow: ellipsis;
+	background: rgba(40, 40, 40, 0.4);
+	-webkit-box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.5) inset;
+	box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.5) inset;
+	-webkit-transition: all 502ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+	-moz-transition: all 502ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+	-o-transition: all 502ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+	transition: all 502ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
 }
 
 .input-name:hover {
-  color: rgba(181,181,181,1);
-  background: rgba(0,0,0,0.4);
-  -webkit-transition: all 500ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
-  -moz-transition: all 500ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
-  -o-transition: all 500ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
-  transition: all 500ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+	color: rgba(181, 181, 181, 1);
+	background: rgba(0, 0, 0, 0.4);
+	-webkit-transition: all 500ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+	-moz-transition: all 500ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+	-o-transition: all 500ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+	transition: all 500ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
 }
 
 .input-name:focus {
-  width: 213px;
-  cursor: default;
-  padding: -13px 20px 0;
-  color: rgba(255,255,255,1);
-  -webkit-transition: all 601ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
-  -moz-transition: all 601ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
-  -o-transition: all 601ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
-  transition: all 601ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+	width: 213px;
+	cursor: default;
+	padding: -13px 20px 0;
+	color: rgba(255, 255, 255, 1);
+	-webkit-transition: all 601ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+	-moz-transition: all 601ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+	-o-transition: all 601ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
+	transition: all 601ms cubic-bezier(0.68, -0.75, 0.265, 1.75);
 }
 
 .form-btn {
-  display: inline-block;
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-  cursor: pointer;
-  padding: 0 20px;
-  border: none;
-  -webkit-border-radius: 20px;
-  border-radius: 20px;
-  font: normal normal bold 30px/50px "ubuntu", Helvetica, sans-serif;
-  color: rgba(187, 170, 171, 1);
-  -o-text-overflow: clip;
-  text-overflow: clip;
-  background: rgba(255,255,255,1);
-  -webkit-box-shadow: 0 1px 0 0 rgb(119,119,119) , 0 2px 0 0 rgb(119,119,119) , 0 3px 0 0 rgb(119,119,119) , 0 4px 0 0 rgb(119,119,119) , 0 5px 0 0 rgb(119,119,119) , 0 6px 0 0 rgb(119,119,119) , 0 0 5px 0 rgba(0,0,0,0.0980392) , 0 1px 3px 0 rgba(0,0,0,0.298039) , 0 3px 5px 0 rgba(0,0,0,0.2) , 0 5px 10px 0 rgba(0,0,0,0.247059) , 0 10px 10px 0 rgba(0,0,0,0.2) , 0 20px 20px 0 rgba(0,0,0,0.14902) ;
-  box-shadow: 0 1px 0 0 rgb(119,119,119) , 0 2px 0 0 rgb(119,119,119) , 0 3px 0 0 rgb(119,119,119) , 0 4px 0 0 rgb(119,119,119) , 0 5px 0 0 rgb(119,119,119) , 0 6px 0 0 rgb(119,119,119) , 0 0 5px 0 rgba(0,0,0,0.0980392) , 0 1px 3px 0 rgba(0,0,0,0.298039) , 0 3px 5px 0 rgba(0,0,0,0.2) , 0 5px 10px 0 rgba(0,0,0,0.247059) , 0 10px 10px 0 rgba(0,0,0,0.2) , 0 20px 20px 0 rgba(0,0,0,0.14902) ;
-  text-shadow: 0 1px 0 #FFFFFF ;
+	display: inline-block;
+	-webkit-box-sizing: content-box;
+	-moz-box-sizing: content-box;
+	box-sizing: content-box;
+	cursor: pointer;
+	padding: 0 20px;
+	border: none;
+	-webkit-border-radius: 20px;
+	border-radius: 20px;
+	font: normal normal bold 30px/50px "ubuntu", Helvetica, sans-serif;
+	color: rgba(187, 170, 171, 1);
+	-o-text-overflow: clip;
+	text-overflow: clip;
+	background: rgba(255, 255, 255, 1);
+	-webkit-box-shadow: 0 1px 0 0 rgb(119, 119, 119), 0 2px 0 0
+		rgb(119, 119, 119), 0 3px 0 0 rgb(119, 119, 119), 0 4px 0 0
+		rgb(119, 119, 119), 0 5px 0 0 rgb(119, 119, 119), 0 6px 0 0
+		rgb(119, 119, 119), 0 0 5px 0 rgba(0, 0, 0, 0.0980392), 0 1px 3px 0
+		rgba(0, 0, 0, 0.298039), 0 3px 5px 0 rgba(0, 0, 0, 0.2), 0 5px 10px 0
+		rgba(0, 0, 0, 0.247059), 0 10px 10px 0 rgba(0, 0, 0, 0.2), 0 20px 20px
+		0 rgba(0, 0, 0, 0.14902);
+	box-shadow: 0 1px 0 0 rgb(119, 119, 119), 0 2px 0 0 rgb(119, 119, 119),
+		0 3px 0 0 rgb(119, 119, 119), 0 4px 0 0 rgb(119, 119, 119), 0 5px 0 0
+		rgb(119, 119, 119), 0 6px 0 0 rgb(119, 119, 119), 0 0 5px 0
+		rgba(0, 0, 0, 0.0980392), 0 1px 3px 0 rgba(0, 0, 0, 0.298039), 0 3px
+		5px 0 rgba(0, 0, 0, 0.2), 0 5px 10px 0 rgba(0, 0, 0, 0.247059), 0 10px
+		10px 0 rgba(0, 0, 0, 0.2), 0 20px 20px 0 rgba(0, 0, 0, 0.14902);
+	text-shadow: 0 1px 0 #FFFFFF;
 }
 
 .form-btn:hover {
-  background: #FFFFFF;
+	background: #FFFFFF;
 }
 
 .form-btn:active {
-  margin: 6px 0 0;
-  background: rgba(255,255,255,1);
-  -webkit-box-shadow: 0 -1px 10px 0 rgba(0,0,0,0.247059) , 0 4px 10px 0 rgba(0,0,0,0.2) , 0 14px 20px 0 rgba(0,0,0,0.14902) ;
-  box-shadow: 0 -1px 10px 0 rgba(0,0,0,0.247059) , 0 4px 10px 0 rgba(0,0,0,0.2) , 0 14px 20px 0 rgba(0,0,0,0.14902) ;
+	margin: 6px 0 0;
+	background: rgba(255, 255, 255, 1);
+	-webkit-box-shadow: 0 -1px 10px 0 rgba(0, 0, 0, 0.247059), 0 4px 10px 0
+		rgba(0, 0, 0, 0.2), 0 14px 20px 0 rgba(0, 0, 0, 0.14902);
+	box-shadow: 0 -1px 10px 0 rgba(0, 0, 0, 0.247059), 0 4px 10px 0
+		rgba(0, 0, 0, 0.2), 0 14px 20px 0 rgba(0, 0, 0, 0.14902);
 }
 
 .form-btn:focus {
-  background: rgba(255,255,255,1);
+	background: rgba(255, 255, 255, 1);
+}
+
+.color:light-purple {
+	color: rgba(138, 84, 201, 1);
 }
