--- a/WebContent/resources/custom.css
+++ b/WebContent/resources/custom.css
@@ -10,6 +10,12 @@
     src: url('//fonts.googleapis.com/css?family=Share+Tech+Mono'); /*URL to font*/
 }
 
+@font-face {
+    font-family: 'Baloo Bhai'; /*a name to be used later*/
+    src: url('//fonts.googleapis.com/css?family=Baloo+Bhai'); /*URL to font*/
+}
+
+
 
 .form-control{
 	opacity: 1; !important
@@ -78,11 +84,19 @@ h2.logo{
 	font-size: 30px;
 	font-family: 'Ubuntu', sans-serif;
 	color: white;
+	opacity: 1;
 }
 h1.logo{
 	font-size: 60px;
 	font-family: 'Ubuntu', sans-serif;
 	color: white;
+	opacity: 1; !important;
+}
+
+h1.title{
+	font-family: 'Baloo Bhai', cursive;
+	color: white;
+	font-size: 60px;
 }
 .row{
 	text-align: center;
@@ -113,7 +127,25 @@ h1.logo{
 	height: 400px;
 	
 }
+.ranking{
+	background: #FF6347;
+	border-style: groove;
+	border-color: white;
+	border-radius: 30px 30px 30px 30px;
+	height: 600px;
+}
 
+.ranking-firstplace{
+	max-width: 100%;
+	display:block; 
+	border: none;
+	background: url('img/firstplace.png');
+	background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
+    height: 128px;
+    width: 128px;
+}
 
 .navbar-brand{	
 	stress: inherit;
